Movable token issue
As a provisional solution to the “jumping” tokens, we are setting
movable tokens to size 1x1 when they need to be hidden.  Hidden,
invisible or transparent elements do not seem to be affected by matrix
transforms, so this provides a way to move them while “invisible”.

--- a/client/_storyMaker/story.css
+++ b/client/_storyMaker/story.css
@@ -306,7 +306,7 @@ div.storyButton {
 
 	font-family: Arial;
 
-	font-size: 2.0vh;
+	font-size: 3.0vh;
 
 	margin-top: 4px;
 
