--- a/client/_storyMaker/storyCongrats.css
+++ b/client/_storyMaker/storyCongrats.css
@@ -133,7 +133,7 @@
      
         color: yellow;
       }
-      
+      blue
       90% {
      
         color: white;
@@ -141,7 +141,7 @@
       
       100% {
         
-        color: pink;
+        color: blue;
       }
     }
 
@@ -197,7 +197,7 @@
       
       100% {
         
-        color: pink;
+        color: blue;
       }
     }
 
